@@ -48,7 +48,7 @@
     <input type="hidden" name="5e" value="value" />
 </form>
 
-<form action="http://localhost/" method="post" name="6th_form">
+<form action="http://localhost/" method="post" name="6th_form" id="6th_form">
     <select name="select">
         <option value="one">Option 1</option>
         <option value="two">Option 2</option>
